# AdventOfCode

./: .gitignore  README.md
08/: 8_1.py
09/: 9_1.py
12/: 12_2.py
14/: 14_1.py
2/: part_1_2.py  part_2_2.py
2020/01/: dec_1.py
2020/03/: 3_2.py
2020/04/: 4_1.py
2020/07/: 7_1.py
2020/10/: 10_1.py  10_2.py
2020/11/: 11_1.py  11_2.py
2020/12/: 12_1.py
2020/13/: 13_1.py  13_2.py
2020/14/: 14_2.py
2020/15/: 15_1.py  15_2.py
2020/16/: 16_1.py  16_2.py
2021/: Makefile  day.jinja2  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  init_day.py  pyproject.toml
2021/helpers/: utils.py
2022/: Cargo.toml
2022/src/: day1.rs  day10.rs  day11.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs
2024/: Cargo.toml
2024/src/: day1.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day2.rs  day3.rs  day4.rs  day5.rs  day9.rs  lib.rs  main.rs
3/: 3_1.py
5/: 5_1.py  5_2.py
6/: 6_1.py
7/: 7_2.py
8/: 8_2.py
